--- a/src/projectcard/projectcard.css
+++ b/src/projectcard/projectcard.css
@@ -1,3 +1,10 @@
+.containerr {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: flex-start;
+    justify-content: center;
+}
+
 .card {
     margin: 10px;
     background-color: #fff;
@@ -5,12 +12,10 @@
     box-shadow: 0 2px 20px rgba(0, 0, 0, 0.2);
     overflow: hidden;
     width: 500px;
- 
 }
 
 .card-header {
     width: 100%;
-    /* height: 200px; */
     object-fit: cover;
 }
 
@@ -24,7 +29,7 @@
 }
 
 .tools {
-    
+
     display: flex;
     width: 100%;
     justify-content: flex-start;
@@ -52,4 +57,18 @@
 .card-body p {
     font-size: 13px;
     margin: 0 0 40px;
+    /* white-space:nowrap; */
+    text-overflow: ellipsis;
+    /* overflow: hidden; */
+    /* width: 350px; */
+}
+
+.read {
+    margin-left: 15px;
+    cursor: pointer;
+    color: #333;
+    padding: 3px;
+    border-radius: 5px;
+    /* border: 1px solid black; */
+    background-color: #facf0f;
 }
